# bug_rust_nvim

./: Cargo.toml
src/: main.rs
