[package]
name = "tmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0" }
mongodb = { version = "2.1.0", default-features = false, features = ["sync"]}
serde_bytes = "0.11"
bson = "2.0.0"
